--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,1 @@
-* @actions/actions-runtime
-
-/packages/artifact/   @actions/artifacts-actions
-/packages/cache/      @actions/actions-cache
-/packages/attest/      @actions/package-security
+mostafa.wahed@icloud.com
